--- a/src/section07/index.css
+++ b/src/section07/index.css
@@ -8,11 +8,38 @@
   text-decoration: none;
   list-style-type: none;
 }
-.main-blog {
+.container{
+  display: flex;
+  flex-direction: column;
+  width: 1280px;
+  margin: 0 auto;
+}
+.header, .footer{
+display: flex;
+justify-content: center;
+align-items: center;
+background-color: black;
+color: white;
+width: 100%;
+height: 60px;
+}
+.header-title{
+  font-size: 1.5rem;
+}
+.footer{
+  position: fixed;
+  width: 1280px;
+  margin: 0 auto;
+  bottom: 0;
+}
+.footer p{
+  font-size: 0.8rem;
+}
+.main-blog{
   display: flex;
   flex-direction: row;
 }
-.weblog-main-left {
+.weblog-main-left{
   position: sticky;
   top: 0;
   width: 250px;
@@ -20,7 +47,7 @@
   border: 2px solid #c9c9c9;
   background-color: #c1c1c1;
 }
-.weblog-main-right {
+.weblog-main-right{
   display: flex;
   flex-direction: column;
   flex: 1;
