--- a/src/section08/index.css
+++ b/src/section08/index.css
@@ -8,13 +8,14 @@
   text-decoration: none;
   list-style-type: none;
 }
-.container{
-    display: flex;
-    flex-direction: column;
-    width: 1280px;
-    margin: 0 auto;
-  }
-  .header, .footer{
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 1280px;
+  margin: 0 auto;
+}
+.header,
+.footer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,16 +23,40 @@
   color: white;
   width: 100%;
   height: 60px;
-  }
-  .header-title{
-    font-size: 1.5rem;
-  }
-  .footer{
-    position: fixed;
-    width: 1280px;
-    margin: 0 auto;
-    bottom: 0;
-  }
-  .footer p{
-    font-size: 0.8rem;
-  }
+}
+.header-title {
+  font-size: 1.5rem;
+}
+.main {
+  display: flex;
+  flex-direction: row;
+}
+.content-product {
+  display: flex;
+  justify-content: space-between;
+  flex: 1;
+  flex-wrap: wrap;
+  padding: 5px 10px;
+}
+.product{
+  width: 240px;
+  margin: 5px;
+}
+.basket-container {
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  margin-left: 5px;
+  border-left: 1px solid gray;
+  background-color: #c1c1c1;
+  padding: 5px 10px;
+}
+.footer {
+  position: fixed;
+  width: 1280px;
+  margin: 0 auto;
+  bottom: 0;
+}
+.footer p {
+  font-size: 0.8rem;
+}
