--- a/src/section08/components/basket/Basket.css
+++ b/src/section08/components/basket/Basket.css
@@ -1,6 +1,3 @@
-.basket-group{
-
-}
 .basket-group-header{
     display: flex;
     justify-content: space-between;
@@ -17,18 +14,18 @@
 .basket-list{
     display: flex;
     flex-direction: column;
-    padding: 5px 0;
+    padding: 5px;
     background-color: #d3cccc;
-    padding: 0 5px;
+
 }
 .basket-sum{
     display: flex;
     flex-direction: column;
     border-top: 1px solid gray;
-padding-left: 15px;
-padding-right: 5px;
-font-weight: bold;
-background-color: #d3cccc;
+    padding-left: 15px;
+    padding-right: 5px;
+    font-weight: bold;
+    background-color: #d3cccc;
 }
 .basket-total{
     display: flex;
@@ -36,4 +33,9 @@ background-color: #d3cccc;
     padding: 5px 0;
     font-weight: bold;
     border-top: 1px solid gray;
+}
+.empty-basket{
+    font-weight: bold;
+    font-size: 0.9rem;
+    color: darkgray;
 }
