--- a/src/section08/index.css
+++ b/src/section08/index.css
@@ -8,14 +8,14 @@
   text-decoration: none;
   list-style-type: none;
 }
-.container {
+
+.container{
   display: flex;
   flex-direction: column;
   width: 1280px;
   margin: 0 auto;
 }
-.header,
-.footer {
+.header,.footer{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -24,17 +24,17 @@
   width: 100%;
   height: 60px;
 }
-.header-title {
+.header-title{
   font-size: 1.5rem;
 }
-.main {
+.main{
   display: flex;
   flex-direction: row;
 }
-.content-product {
+.content-product{
   display: flex;
   justify-content: space-between;
-  flex: 1;
+  flex:1;
   flex-wrap: wrap;
   padding: 5px 10px;
 }
@@ -42,7 +42,7 @@
   width: 240px;
   margin: 5px;
 }
-.basket-container {
+.basket-container{
   display: flex;
   flex-direction: column;
   width: 250px;
@@ -51,12 +51,12 @@
   background-color: #c1c1c1;
   padding: 5px 10px;
 }
-.footer {
+.footer{
   position: fixed;
   width: 1280px;
   margin: 0 auto;
   bottom: 0;
 }
-.footer p {
+.footer p{
   font-size: 0.8rem;
 }
